--- a/intoTheWilds-frontend-main/.env.production
+++ b/intoTheWilds-frontend-main/.env.production
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL=https://into-the-wild-691w.onrender.com/api/v1
+VITE_API_BASE_URL=https://into-the-wild-static.onrender.com/api/v1
