--- a/intoTheWilds-frontend-main/package.json
+++ b/intoTheWilds-frontend-main/package.json
@@ -22,6 +22,7 @@
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.454.0",
+    "recharts":"^2.8.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
