--- a/intothewilds-backend-main/package.json
+++ b/intothewilds-backend-main/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "seed:admin": "node scripts/seedAdmin.js"
   },
   "author": "",
   "license": "ISC",
