--- a/intothewilds-backend-main/package.json
+++ b/intothewilds-backend-main/package.json
@@ -6,7 +6,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "seed:admin": "node scripts/seedAdmin.js"
+    "seed:admin": "node scripts/seedAdmin.js",
+    "build": "npm run seed:admin"
   },
   "author": "",
   "license": "ISC",
