--- a/intoTheWilds-frontend-main/package.json
+++ b/intoTheWilds-frontend-main/package.json
@@ -15,14 +15,17 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-slot": "^1.2.3",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.454.0",
-    "recharts":"^2.8.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
@@ -33,14 +36,18 @@
     "react-router-dom": "^6.27.0",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.3",
+    "react-table": "^7.8.0",
     "react-toastify": "^10.0.6",
+    "recharts": "^2.8.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "validator": "^13.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
-    "@types/node": "^22.15.17",
+    "@types/node": "^22.15.31",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
