--- a/intoTheWilds-frontend-main/package.json
+++ b/intoTheWilds-frontend-main/package.json
@@ -41,6 +41,7 @@
     "recharts": "^2.8.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14",
+    "swr": "^2.3.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "validator": "^13.15.0"
