--- a/intoTheWilds-frontend-main/package.json
+++ b/intoTheWilds-frontend-main/package.json
@@ -18,6 +18,8 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "@react-oauth/google": "^0.12.1",
+    "@tanstack/react-query": "^5.80.7",
+    "@tanstack/react-query-devtools": "^5.80.7",
     "axios": "^1.7.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -33,6 +35,7 @@
     "react-feather": "^2.0.10",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.3",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.27.0",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.3",
@@ -44,7 +47,8 @@
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "validator": "^13.15.0"
+    "validator": "^13.15.0",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
